# linux-stats-monitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  stats-monitor.cpp
sensors/: CMakeLists.txt  cpu_sensor.cpp  mem_sensor.cpp
sensors/headers/: cpu_sensor.hpp  mem_sensor.hpp  sensor.hpp
sensors/headers/data/: cpu_data.hpp  memory_sensor.hpp  sensor_data.hpp  sensor_readings.hpp
